<resources>
    <string name="app_name">RecipeApp</string>
    <string name="main_app_title">My Recipe Book</string>
    <string name="recipe_logo_button_content_description">Recipes Button</string>
    <string name="shopping_list_button_content_description">Shopping List Button</string>
    <string name="recipe_logo_title">Recipes</string>
    <string name="shopping_list_logo_title">Shopping List</string>
    <string name="recipes_title"><u>Meals</u></string>
    <string name="add_new_recipe_button_content_description">Add New Recipe</string>
    <string name="shopping_list_title"><u>Shopping List</u></string>
    <string name="delete_item_button_content_description">Delete Item</string>
    <string name="breakfast_button_title">Breakfast</string>
    <string name="lunch_button_title">Lunch</string>
    <string name="dinner_button_title">Dinner</string>
    <string name="dessert_button_title">Dessert</string>
    <string name="drinks_button_title">Drinks</string>
    <string name="snacks_button_title">Snacks</string>
    <string name="other_button_title">Other</string>
    <string name="all_button_title">All</string>
    <string name="breakfast_recipes_button_content_description">Breakfast Recipes</string>
    <string name="lunch_recipes_button_content_description">Lunch Recipes</string>
    <string name="dinner_recipes_button_content_description">Dinner Recipes</string>
    <string name="dessert_recipes_button_content_description">Dessert Recipes</string>
    <string name="drinks_recipes_button_content_description">Drinks Recipes</string>
    <string name="snacks_recipes_button_content_description">Snacks Recipes</string>
    <string name="other_recipes_button_content_description">Other Recipes</string>
    <string name="all_recipes_button_content_description">All Recipes</string>
    <string name="recipe_name_title"><u>Recipe Name:</u></string>
    <string name="recipe_category_title"><u>Category:</u></string>
    <string name="recipe_total_time_title"><u>Time:</u></string>
    <string name="recipe_ingredients_title"><u>Ingredients:</u></string>
    <string name="recipe_directions_title"><u>Directions:</u></string>
    <string name="all_recipes_title"><u>All Recipes</u></string>
    <string name="breakfast_recipes_title">Breakfast Recipes</string>
    <string name="dessert_recipes_title">Dessert Recipes</string>
    <string name="dinner_recipes_title">Dinner Recipes</string>
    <string name="drinks_recipes_title">Drinks Recipes</string>
    <string name="lunch_recipes_title">Lunch Recipes</string>
    <string name="other_recipes_title">Other Recipes</string>
    <string name="snacks_recipes_title">Snacks Recipes</string>
</resources>