<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/dark">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/border">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/delete_item"
                android:contentDescription="@string/delete_item_button_content_description"
                android:src="@drawable/ic_delete_item_button_dark"
                android:background="@android:color/transparent"
                android:layout_gravity="end"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/recipe_title"
                android:text="@string/recipe_name_title"
                android:textSize="23sp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/titleTextView"
                android:text="Title"
                android:textSize="20sp"
                android:textColor="@color/lightBlue"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/category_title"
                android:text="@string/recipe_category_title"
                android:textSize="23sp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/categoryTextView"
                android:text="Category"
                android:textSize="20sp"
                android:textColor="@color/lightBlue"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/time_title"
                android:text="@string/recipe_total_time_title"
                android:textSize="23sp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/timeTextView"
                android:text="Total Time"
                android:textSize="20sp"
                android:textColor="@color/lightBlue"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ingredients_title"
                android:text="@string/recipe_ingredients_title"
                android:textSize="23sp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ingredientsTextView"
                android:text="Ingredients"
                android:textSize="20sp"
                android:textColor="@color/lightBlue"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/directions_title"
                android:text="@string/recipe_directions_title"
                android:textSize="23sp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/directionsTextView"
                android:text="Directions"
                android:textSize="20sp"
                android:textColor="@color/lightBlue"
                android:layout_marginBottom="15dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>